--- a/nitro-cli.yml
+++ b/nitro-cli.yml
@@ -1,21 +1,18 @@
 version: 1
 workspace:
-  id: 29554a8da297555bb155ba6fa80d55da
+  id: 29564a8da297565bb156ba6fa80d56da
   name: nitro-pipelines
 commands:
-  - name: setup
-    description: Create an environment
+  - name: provision
+    description: Provision the environment
     steps:
-      - cwd: .
-        scripts: 
-          - python3 -m venv env
-          - source env/bin/activate
-  - name: clean
-    description: Create an environment
+      - scripts: 
+          - pyenv virtualenv 3.9.6 na-nitro-cli-3.9.6
+          - pip install -r requirements.txt
+  - name: destroy
+    description: Destroy the environment
     steps:
-      - cwd: .
-        scripts: 
-          - rm -rf ./env
+      - script: pyenv uninstall -f na-nitro-cli-3.9.6
   - name: test-build
     description: test
     steps:
@@ -31,8 +28,8 @@ commands:
   - name: build
     description: Build the docker image
     steps: 
-      - script: docker build -t nitroagility/nitro-bitbucket-pipelines:55 -f ./bitbucket/Dockerfile .
+      - script: docker build -t nitroagility/nitro-bitbucket-pipelines:56 -f ./bitbucket/Dockerfile .
   - name: push
     description: Build the docker image
     steps:
-      - script: docker push nitroagility/nitro-bitbucket-pipelines:55
+      - script: docker push nitroagility/nitro-bitbucket-pipelines:56
