--- a/nitro-cli.yml
+++ b/nitro-cli.yml
@@ -1,18 +1,17 @@
 version: 1
 workspace:
-  id: 29564a8da297565bb156ba6fa80d56da
+  id: 29574a8da297575bb157ba6fa80d57da
   name: nitro-pipelines
 commands:
   - name: provision
     description: Provision the environment
     steps:
       - scripts: 
-          - pyenv virtualenv 3.9.6 na-nitro-cli-3.9.6
-          - pip install -r requirements.txt
+          - pyenv virtualenv 3.9.6 nitro-pipelines-3.9.6 || pip install --upgrade pip || pip install -r requirements.txt
   - name: destroy
     description: Destroy the environment
     steps:
-      - script: pyenv uninstall -f na-nitro-cli-3.9.6
+      - script: pyenv uninstall -f nitro-pipelines-3.9.6
   - name: test-build
     description: test
     steps:
@@ -28,8 +27,8 @@ commands:
   - name: build
     description: Build the docker image
     steps: 
-      - script: docker build -t nitroagility/nitro-bitbucket-pipelines:56 -f ./bitbucket/Dockerfile .
+      - script: docker build -t nitroagility/nitro-bitbucket-pipelines:57 -f ./bitbucket/Dockerfile .
   - name: push
     description: Build the docker image
     steps:
-      - script: docker push nitroagility/nitro-bitbucket-pipelines:56
+      - script: docker push nitroagility/nitro-bitbucket-pipelines:57
