--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,10 @@
             "request": "launch",
             "mode": "auto",
             "program": "./main.go",
-            "args": [],
+            "args": [ "build", "ms-sample-1"],
             "env": {
-                "ENV": "DEV"
+                "ENV": "DEV",
+                "NITRO_PIPELINES_MICROSERVICES_PATH": "./test/microservices.yml"
             }
         },
     ]
