--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "mode": "auto",
             "program": "./main.go",
-            "args": [ "build", "p24-next-telegram-bot"],
+            "args": [ "promote", "p24-next-telegram-bot"],
             "env": {
                 "ENV": "DEV",
                 "ENV_TARGET": "DEV",
