--- a/bitbucket/Dockerfile
+++ b/bitbucket/Dockerfile
@@ -27,7 +27,8 @@ RUN export DEBIAN_FRONTEND="noninteractive" && apt-get update && apt-get install
     gettext-base \
     python3.9 \
     python3-pip \
-    python3.10-venv
+    python3.10-venv \
+    jq
 
 # Install AWS Cli
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip && ./aws/install && rm awscliv2.zip && rm -rf awscliv2
